# analyst-workspace-design

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSE  PROJECT.md  README.md  REQUIREMENTS.md  ROADMAP.md  docker-compose.yml
.github/workflows/: README.md  ci.yml
.planning/: BACKLOG-POST-MVP.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  VERIFICATION-RELEASE-v1.0.md  config.json
.planning/intel/: STACK.md  (+2 more)
backend/: .dockerignore  .env.example  Dockerfile  build.spec  pyproject.toml  ruff.toml
backend/app/: config.py  main.py  main_cli.py  models.py
backend/app/clients/: llm.py  mcp.py
backend/app/orchestrator/: __init__.py  cards.py  events.py  loop.py  persistence.py  safety.py  title.py
backend/app/routes/: chat.py  connections.py  health.py  llm_config.py  log_cards.py  mcp.py  search.py  sessions.py
backend/app/storage/: db.py  migrations.py
backend/tests/: conftest.py  test_anonymization.py  test_cards_advanced.py  test_chat_confirm_route.py  test_chat_e2e_three_prompts.py  test_chat_route.py  test_config_strict.py  test_connections_route.py  test_db.py  test_deanonymize_route.py  test_health.py  test_llm_client.py  test_llm_client_edge_cases.py  test_llm_config_route.py  test_log_cards_route.py  test_mcp_client.py  test_mcp_client_edge_cases.py  test_mcp_route.py  test_metadata_suggest_route.py  test_migrations_v5.py  test_orchestrator_cards.py  test_orchestrator_coverage.py  test_orchestrator_events.py  test_orchestrator_events_new.py  test_orchestrator_loop.py  test_orchestrator_loop_confirm.py  test_orchestrator_loop_errors.py  test_orchestrator_persistence.py  test_orchestrator_safety.py  test_orchestrator_title.py  test_routes_edge_cases.py  test_search_route.py  test_sessions_route.py
backend/tests/fixtures/: mcp_responses.py
desktop/: .gitignore  electron-builder.yml  main.js  package.json  preload.js
docs/: 00b-mcp-capability-map.md  API.md  CURL.md  DEMO-FEEDBACK-TEMPLATE.md  DEMO-OBSERVER-CHECKLIST.md  DEMO-SCRIPT.md  USER.md
frontend/: .dockerignore  .env.local.example  Dockerfile  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vitest.config.ts
scripts/: seed-demo-data.py
(+194 files in other folders)
